<resources>
    <string name="app_name">ClipFinder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="dashboard">Dashboard</string>

    <string name="spotify_base_url">https://api.spotify.com/v1/</string>
    <string name="access_token_base_url">https://accounts.spotify.com/api/</string>
    <string name="spotify_charts_base_url">https://spotifycharts.com/</string>
    <string name="youtube_base_url">https://www.googleapis.com/youtube/v3/</string>

    <string name="genres">Genres</string>
    <string name="featured_playlists">Featured playlists</string>
    <string name="top_tracks">Top tracks</string>
    <string name="youtube">YouTube</string>
    <string name="no_clips_loaded_yet">No clips loaded yet.</string>
    <string name="search_for_some">Search for some using the bar above.</string>
    <string name="title_activity_track_videos">TrackVideosActivity</string>
    <string name="title_activity_category">CategoryActivity</string>

    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="nothing_loaded_yet">Nothing loaded yet.</string>
    <string name="no_playlists_loaded_yet">No playlists loaded yet.</string>
    <string name="no_tracks_loaded_yet">No tracks loaded yet.</string>
    <string name="no_albums_loaded_yet">No albums loaded yet.</string>
    <string name="no_artists_loaded_yet">No artists loaded yet.</string>
    <string name="error_player">There was an error initializing youtube player.</string>
    <string name="album">Album</string>
    <string name="artists">Artists</string>
    <string name="similar_tracks">Similar tracks</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="action_settings">Settings</string>
    <string name="albums">Albums</string>
    <string name="related_artists">Related artists</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="tracks">Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="categories">Categories</string>
    <string name="no_favourite_albums_addded_yet">No favourite albums addded yet.</string>
    <string name="no_favourite_artists_added_yet">No favourite artists added yet.</string>
    <string name="no_favourite_playlists_added_yet">No favourite playlists added yet.</string>
    <string name="no_favourite_categories_added_yet">No favourite categories added yet.</string>
    <string name="no_favourite_tracks_added_yet">No favourite tracks added yet.</string>
    <string name="new_playlist">New playlist</string>
    <string name="no_playlists_created_yet_make_a_new_one">No playlists created yet - make a new one.</string>
    <string name="playlist_name">Name</string>
    <string name="ok">OK</string>
    <string name="title_activity_video_playlist">VideoPlaylistActivity</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="internet_connection_is_needed">Internet connection is needed for app to work properly.</string>
    <string name="browse_for_albums">Browse albums and save them as favourite to see them here.</string>
    <string name="browse_for_artists">Browse for artists and save them as favourite to see them here.</string>
    <string name="browse_for_playlists">Browse for playlists and save them as favourite to see them here.</string>
    <string name="browse_for_tracks">Browse for tracks and save them as favourite to see them here.</string>
    <string name="browse_for_categories">Browse for categories and save them as favourite to see them here.</string>
    <string name="search_hint">Search…</string>
    <string name="videos">Videos</string>
    <string name="spotify">Spotify</string>
    <string name="user">User</string>
    <string name="reload">Reload</string>
    <string name="account">Your Spotify</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="playback_requires_login">Playback requires logging in to Spotify (with a premium account).</string>
    <string name="spotify_login">Spotify login</string>
    <string name="need_to_login_to_see_playlists">You need to login to Spotify (with a premium account) to see your playlists</string>
    <string name="no_spotify_playlists">You have no spotify playlists - add some via the Spotify app</string>
    <string name="need_to_login_to_see_saved_tracks_and_albums">You need to login to Spotify (with a premium account) to see your saved tracks and albums</string>
    <string name="need_to_login_to_see_top_tracks_and_artists">You need to login to Spotify (with a premium account) to see your top tracks and artists.</string>
    <string name="no_video_playlists_created_yet">No video playlists created yet.</string>
    <string name="about">About</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="channel_name">Playback Notification Channel</string>
    <string name="channel_description">Playback channel</string>
    <string name="clear_video_cache">Clear video cache</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next_track">Next track</string>
    <string name="previous_track">Previous track</string>
    <string name="category">Category</string>
    <string name="track_videos">Track videos</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="video_playlist">Video playlist</string>
    <string name="soundcloud">SoundCloud</string>
    <string name="error_occurred">Error occurred</string>
    <string name="saved">Saved</string>
    <string name="top">Top</string>
</resources>
