<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--TODO: separate groups, fix icons, make it so selected item does not remain checked -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_action_show_spotify_main"
            android:icon="@drawable/about"
            android:title="@string/spotify" />
        <item
            android:id="@+id/drawer_action_show_soundcloud_main"
            android:icon="@drawable/about"
            android:title="@string/soundcloud" />

        <item
            android:id="@+id/drawer_action_login"
            android:icon="@drawable/login"
            android:title="@string/login" />
        <item
            android:id="@+id/drawer_action_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/drawer_action_remove_video_search_data"
            android:icon="@drawable/delete"
            android:title="@string/clear_video_cache" />
        <item
            android:id="@+id/drawer_action_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/drawer_action_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>