<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_view_menu_item"
        android:icon="@drawable/search_white"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_login"
        android:icon="@drawable/login"
        android:title="@string/login"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>