<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_action_show_spotify_main"
            android:icon="@drawable/spotify"
            android:title="@string/spotify" />
    </group>
    <group
        android:id="@+id/drawer_group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_action_remove_video_search_data"
            android:icon="@drawable/delete"
            android:title="@string/clear_video_cache" />
        <item
            android:id="@+id/drawer_action_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>
</menu>